--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -16,7 +16,9 @@
     "joi": "^10.1.0",
     "jwt-simple": "^0.5.1",
     "log4js": "^1.1.0",
+    "md5": "^2.2.1",
     "mysql": "^2.12.0",
-    "serve-favicon": "^2.3.2"
+    "serve-favicon": "^2.3.2",
+    "uuid": "^3.0.1"
   }
 }
