--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -10,6 +10,7 @@
   "author": "aedanlee",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-cluster": "0.0.4",
