--- a/Front/bower.json
+++ b/Front/bower.json
@@ -37,7 +37,8 @@
     "moment": "^2.13.0",
     "angular-toastr": "^1.7.0",
     "angular-chart.js": "~1.0.0",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "zTree":"~3.5.27"
   },
   "devDependencies": {},
   "resolutions": {
