add LPOfferRequest handling

--- a/Service/config/SAMPLE_CONFIG.ini
+++ b/Service/config/SAMPLE_CONFIG.ini
@@ -1,9 +1,7 @@
 [DEFAULT]
 bind = 8080
-noticeip = 127.0.0.1
-noticeport = 9090
-noticeurl = /ad/notice
-noticesecond = 3600
+lpofferrequrl = /
+lpclickurl = /click
 production = true
 
 [SYSTEM]
