add cookie for landing page click

--- a/Service/config/development.ini
+++ b/Service/config/development.ini
@@ -20,11 +20,11 @@ connect-timeout-ms = 1000
 response-timeout-ms = 1000
 
 [DB]
-host = sspdb101-prod.cmjwzbzhppgn.us-west-1.rds.amazonaws.com
+host = dev.cmjwzbzhppgn.us-west-1.rds.amazonaws.com
 user = root
-pass = Azt_ch_X_125
+pass = R%LKsIJF412
 port = 3306
-dbname = TestHaiwaiSsp
+dbname = AdClickTool
 max_open_conns = 100
 max_idle_conns = 100
 
