--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "babel src -d routes"
   },
   "author": "aedanlee",
   "license": "ISC",
   "dependencies": {
     "async": "^2.1.4",
+    "babel-core": "^6.21.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-cluster": "0.0.4",
@@ -21,5 +23,9 @@
     "mysql": "^2.12.0",
     "serve-favicon": "^2.3.2",
     "uuid": "^3.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0"
   }
 }
