--- a/Service/config/development.ini
+++ b/Service/config/development.ini
@@ -2,7 +2,11 @@
 bind = 8080
 lpofferrequrl = /
 lpclickurl = /click
-production = true
+impression = /impression
+s2spostback = /postback
+conversionpixelurl = /conversion.gif
+conversionscripturl = /conversion.js
+production = false
 
 [SYSTEM]
 EnableADX = true
