--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -21,6 +21,7 @@
     "log4js": "^1.1.0",
     "md5": "^2.2.1",
     "mysql": "^2.12.0",
+    "redis": "^2.6.5",
     "serve-favicon": "^2.3.2",
     "uuid": "^3.0.1"
   },
