--- a/Front/bower.json
+++ b/Front/bower.json
@@ -38,11 +38,11 @@
     "angular-toastr": "^1.7.0",
     "angular-chart.js": "~1.1.1",
     "animate.css": "^3.5.2",
-    "zTree":"~3.5.27",
-    "highcharts":"~5.0.6"
+    "highcharts": "~5.0.6",
+    "fsm-sticky-header":"~1.0.3"
   },
   "devDependencies": {},
   "resolutions": {
-    "angular": "^1.2"
+    "angular": "^1.4.0"
   }
 }
