congigure zhanchenxing.ini for postback

--- a/Service/config/zhanchenxing.ini
+++ b/Service/config/zhanchenxing.ini
@@ -4,6 +4,10 @@ lpofferrequrl = /
 lpclickurl = /click
 production = true
 impressionurl = /impression/
+s2spostback = /postback
+conversionpixelurl = /conversion.gif
+conversionscripturl = /conversion.js
+production = false
 
 [SYSTEM]
 EnableADX = true
