--- a/Service/config/SAMPLE_CONFIG.ini
+++ b/Service/config/SAMPLE_CONFIG.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
-bind = 8080
+engineport = 52500
+postbackport = 55500
 lpofferrequrl = /
 lpclickurl = /click
 impressionurl = /impression/
@@ -8,19 +9,12 @@ conversionpixelurl = /conversion.gif
 conversionscripturl = /conversion.js
 production = true
 
-[SYSTEM]
-EnableADX = true
-EnableS2S = true
-
-[DSP]
-update_s = 300
-
 [DB]
-host = sspdb101-prod.cmjwzbzhppgn.us-west-1.rds.amazonaws.com
+host = dev.cmjwzbzhppgn.us-west-1.rds.amazonaws.com
 user = root
-pass = Azt_ch_X_125
+pass = R%LKsIJF412
 port = 3306
-dbname = TestHaiwaiSsp
+dbname = AdClickTool
 max_open_conns = 100
 max_idle_conns = 100
 
@@ -29,23 +23,10 @@ adapter = console
 jsonconfig = {"level":6}
 async = true
 
-[ADM]
-failTry = 5
-interval-min = 10
+[REQCACHE]
+host = newbidderredis0001.augmjh.0001.usw1.cache.amazonaws.com
+port = 6379
 
-[CFilter]
-size = 262144
-bucket_size = 4
-fingerprint_size = 2
-maximum_kicks = 500
-
-[DORY]
-ip = 106.75.61.118:10001
-topic = ssp_adx
-chan-length = 10000
-enable-send = false
-retry-times = 5
-
-[REDIS]
-host = frequencyredis.augmjh.0001.usw1.cache.amazonaws.com
+[MSGQUEUE]
+host = newbidderredis0001.augmjh.0001.usw1.cache.amazonaws.com
 port = 6379
