--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "babel-core": "^6.21.0",
+    "babel-preset-stage-0": "^6.16.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-cluster": "0.0.4",
@@ -26,7 +27,6 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-cli": "^6.18.0"
   }
 }
