the version that can startup successfully

--- a/Service/config/zhanchenxing.ini
+++ b/Service/config/zhanchenxing.ini
@@ -1,5 +1,6 @@
 [DEFAULT]
-bind = 8080
+engineport = 52500
+postbackport = 55500
 lpofferrequrl = /
 lpclickurl = /click
 production = true
@@ -29,7 +30,7 @@ host = localhost
 user = root
 pass = 
 port = 3306
-dbname = AdClickTool
+dbname = SyncedAdClickTool
 max_open_conns = 100
 max_idle_conns = 100
 
