saving interval now can be configured
[TRACKING]
adstatis-interval = 60
ip-interval = 60

--- a/Service/config/SAMPLE_CONFIG.ini
+++ b/Service/config/SAMPLE_CONFIG.ini
@@ -30,3 +30,7 @@ port = 6379
 [MSGQUEUE]
 host = newbidderredis0001.augmjh.0001.usw1.cache.amazonaws.com
 port = 6379
+
+[TRACKING]
+adstatis-interval = 60
+ip-interval = 60
