fix some errors

--- a/Service/config/zhanchenxing.ini
+++ b/Service/config/zhanchenxing.ini
@@ -58,5 +58,9 @@ host = localhost
 port = 6379
 
 [TRACKING]
-adstatis-interval = 60
-ip-interval = 60
+adstatis-interval = 10
+ip-interval = 10
+
+[REQCACHE]
+host = localhost
+port = 6379
