--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -21,6 +21,7 @@
     "jwt-simple": "^0.5.1",
     "log4js": "^1.1.0",
     "md5": "^2.2.1",
+    "moment": "^2.17.1",
     "mysql": "^2.12.0",
     "redis": "^2.6.5",
     "serve-favicon": "^2.3.2",
