--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -4,7 +4,11 @@
   "description": "adclick backend ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --timeout 10000",
+    "test:all": "npm run test -- ./test --recursive",
+    "watch:test:all": "nodemon --watch ./ --recursive --exec npm run test:all",
+    "watch:test": "nodemon --watch ./ --recursive --exec npm run test",
+    "nodemon": "nodemon ./bin/www",
     "start": "node ./bin/www",
     "build": "babel src -d routes  --presets stage-0"
   },
@@ -13,6 +17,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "babel-core": "^6.21.0",
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-0": "^6.16.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
@@ -28,6 +33,11 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0"
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-polyfill": "^6.22.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "supertest": "^2.0.1"    
   }
 }
