req cache time to 24 hour, and configurable

--- a/Service/config/SAMPLE_CONFIG.ini
+++ b/Service/config/SAMPLE_CONFIG.ini
@@ -8,6 +8,7 @@ s2spostback = /postback
 conversionpixelurl = /conversion.gif
 conversionscripturl = /conversion.js
 production = true
+reqcachetime = 86400
 
 [DB]
 host = dev.cmjwzbzhppgn.us-west-1.rds.amazonaws.com
