--- a/Service/config/zhanchenxing.ini
+++ b/Service/config/zhanchenxing.ini
@@ -9,6 +9,7 @@ s2spostback = /postback
 conversionpixelurl = /conversion.gif
 conversionscripturl = /conversion.js
 production = false
+reqcachetime = 86400
 
 [SYSTEM]
 EnableADX = true
