--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -8,7 +8,7 @@
     "test:all": "npm run test -- ./test --recursive",
     "watch:test:all": "nodemon --watch ./ --recursive --exec npm run test:all",
     "watch:test": "nodemon --watch ./ --recursive --exec npm run test",
-    "nodemon": "nodemon ./bin/www",
+    "nodemon": "NODE_ENV=development nodemon ./bin/www",
     "start": "node ./bin/www"
   },
   "author": "aedanlee",
@@ -16,8 +16,9 @@
   "dependencies": {
     "async": "^2.1.4",
     "babel-core": "^6.21.0",
-    "babel-preset-latest": "^6.22.0",
     "babel-polyfill": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-cluster": "0.0.4",
@@ -26,8 +27,11 @@
     "log4js": "^1.1.0",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
+    "moment-timezone": "^0.5.11",
     "mysql": "^2.12.0",
     "redis": "^2.6.5",
+    "sequelize": "^3.30.2",
+    "sequelize-connect": "AdBund/sequelize-connect",
     "serve-favicon": "^2.3.2",
     "uuid": "^3.0.1"
   },
