--- a/Front/bower.json
+++ b/Front/bower.json
@@ -39,7 +39,8 @@
     "angular-chart.js": "~1.1.1",
     "animate.css": "^3.5.2",
     "highcharts": "~5.0.6",
-    "angular-clipboard": "^1.5.0"
+    "angular-clipboard": "^1.5.0",
+    "angular-selectize2": "^3.0.1"
   },
   "devDependencies": {},
   "resolutions": {
