--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -20,6 +20,7 @@
     "babel-preset-latest": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "express-cluster": "0.0.4",
     "joi": "^10.1.0",
@@ -29,6 +30,7 @@
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "mysql": "^2.12.0",
+    "nodemailer": "^3.1.3",
     "redis": "^2.6.5",
     "sequelize": "^3.30.2",
     "sequelize-connect": "AdBund/sequelize-connect",
