--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -31,6 +31,7 @@
     "moment-timezone": "^0.5.11",
     "mysql": "^2.12.0",
     "nodemailer": "^3.1.3",
+    "paypal-rest-sdk": "^1.7.1",
     "redis": "^2.6.5",
     "sequelize": "^3.30.2",
     "sequelize-connect": "AdBund/sequelize-connect",
