--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -33,6 +33,8 @@
     "mysql": "^2.12.0",
     "nodemailer": "^3.1.3",
     "redis": "^2.6.5",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sequelize-connect": "AdBund/sequelize-connect",
     "serve-favicon": "^2.3.2",
