--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -33,6 +33,7 @@
     "mysql": "^2.12.0",
     "nodemailer": "^3.1.3",
     "paypal-rest-sdk": "^1.7.1",
+    "popads": "^1.0.1",
     "redis": "^2.6.5",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
