--- a/Front/package.json
+++ b/Front/package.json
@@ -21,6 +21,7 @@
     "grunt": "^0.4.5",
     "grunt-bower-install-simple": "^0.9.3",
     "grunt-bump": "0.0.15",
+    "grunt-cache-bust": "^1.5.0",
     "grunt-changelog": "^0.2.2",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
