--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "mysql": "^2.12.0",
+    "node-schedule": "^1.2.0",
     "nodemailer": "^3.1.3",
     "paypal-rest-sdk": "^1.7.1",
     "popads": "^1.0.1",
