--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
+    "eroadvertising": "^1.0.0",
     "express": "^4.14.0",
     "express-cluster": "0.0.4",
     "joi": "^10.1.0",
@@ -41,7 +42,8 @@
     "sequelize": "^3.30.2",
     "sequelize-connect": "AdBund/sequelize-connect",
     "serve-favicon": "^2.3.2",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "zeropark": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
