--- a/Front/bower.json
+++ b/Front/bower.json
@@ -33,7 +33,7 @@
     "satellizer": "~0.14.0",
     "angular-bootstrap": "^1.3.3",
     "angular-elastic": "^2.5.1",
-    "angular-sanitize": "^1.5.6",
+    "angular-sanitize": "1.6.1",
     "moment": "^2.13.0",
     "angular-toastr": "^1.7.0",
     "angular-chart.js": "~1.1.1",
