--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
+    "exoclick": "^1.0.0",
     "express": "^4.14.0",
     "express-cluster": "0.0.4",
     "joi": "^10.1.0",
