修复列表数据多的问题

--- a/Front/bower.json
+++ b/Front/bower.json
@@ -44,7 +44,8 @@
     "angular-awesome-slider": "^2.4.4",
     "angular-momentjs": "^0.2.2",
     "angular-permission": "^5.2.1",
-    "angular-qr": "0.2.0"
+    "angular-qr": "0.2.0",
+    "angular-vs-repeat": "^1.1.7"
   },
   "resolutions": {
     "angular": "^1.4.0"
