--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -44,6 +44,7 @@
     "sequelize": "^3.30.2",
     "sequelize-connect": "AdBund/sequelize-connect",
     "serve-favicon": "^2.3.2",
+    "sol-redis-pool": "^0.3.3",
     "uuid": "^3.0.1",
     "zeropark": "^1.0.0"
   },
