--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -40,6 +40,7 @@
     "popads": "^1.0.1",
     "redis": "^2.6.5",
     "request": "^2.79.0",
+    "request-ip": "^2.0.1",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.2",
     "sequelize-connect": "AdBund/sequelize-connect",
