--- a/BackEnd-v2/package.json
+++ b/BackEnd-v2/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^3.1.3",
     "paypal-rest-sdk": "^1.7.1",
     "popads": "^1.0.1",
+    "postmark": "^1.4.1",
     "redis": "^2.6.5",
     "request": "^2.79.0",
     "request-ip": "^2.0.1",
