--- a/Front/bower.json
+++ b/Front/bower.json
@@ -46,7 +46,8 @@
     "angular-permission": "^5.2.1",
     "angular-qr": "0.2.0",
     "angular-vs-repeat": "^1.1.7",
-    "jQuery-contextMenu": "^2.4.4"
+    "jQuery-contextMenu": "^2.4.4",
+    "angular-daterangepicker": "^0.2.2"
   },
   "resolutions": {
     "angular": "^1.4.0"
